Add image, table, and form to index.html

--- a/index.html
+++ b/index.html
@@ -13,3 +13,42 @@
      <p>Selamanya</p>
 </body>
 </html> 
+
+<img src="image.png" alt="gambar.jpg" height="300px">
+
+ <table border="2">
+ <tr>
+     <th>nomor</th>
+     <th>nama</th>
+     <th>kelas</th>
+     <th>npm</th>
+ </tr>
+ <tr>
+     <td>1</td>
+     <td>Putri</td>
+     <td>sisfor</td>
+     <td>2417052012</td>
+ </tr>
+ </table>
+    
+ <form action="#" method="post">
+
+    <label for="username">masukkan nama :</label>
+    <input type="text" id="username">
+    <br>
+    <label for="password">password</label>
+    <input type="password" id="password" required>
+    <br><br>
+
+    <button type="submit">kirim</button>
+</form>
+
+<ul>
+    <li><a href="#nama">Profil</a></li>
+    <li><a href="#table">Jadwal</a></li>
+    <li><a href="#form">Daftar</a></li>
+    <li>
+        <a href="https://google.com" target="_blank">ini link</a>
+        <a href="#top">keatas</a>
+    </li>
+</ul>
